[package]
name = "muon-rs"
version = "0.2.2"
authors = ["Doug Lau <doug.p.lau@gmail.com>"]
description = "Serde support for MuON data interchange format"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/muon-rs"
homepage = "https://github.com/muon-data/muon-rs"
repository = "https://github.com/muon-data/muon-rs"
readme = "README.md"
keywords = ["serialization", "serde"]
categories = ["encoding"]
edition = "2018"

[dependencies]
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
